finish mcat page, fix some spacing issues with base css

--- a/client/stylesheets/sass/base.scss
+++ b/client/stylesheets/sass/base.scss
@@ -45,6 +45,7 @@ html {
 
 // Page Grid Layout
 .section-container {
+    margin-bottom: 20px;
     @extend .row;
     .section-header {
         @extend .col;
